[FIX] Crypto: SHA-2 signatures, RSA_SHA256 default