@@ -2,36 +2,29 @@ package org.basex;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.io.*;
+import java.util.concurrent.*;
 
+import org.basex.io.*;
 import org.junit.jupiter.api.*;
 
 /**
- * This class tests the functions of the EXPath Cryptographic module. The tests in basex-test
- * package are only executable after a java keystore has been created.
+ * This class tests the functions of the EXPath Cryptographic module. A Java keystore is generated
+ * in the sandbox before the tests are run.
  *
  * @author BaseX Team, BSD License
  * @author Lukas Kircher
  */
 public final class FNCryptoTest extends SandboxTest {
-  /** User home directory. */
-  private static final String KEYSTORE_DIR = System.getProperty("user.home");
-  /** Java home directory. */
-  private static final String JAVA_HOME = System.getProperty("java.home");
   /** Keytool executable. */
-  private static final String KEYTOOL = JAVA_HOME + "/bin/keytool";
+  private static final String KEYTOOL = System.getProperty("java.home") + "/bin/keytool";
   /** Key store file. */
-  private static final String KEYSTORE = KEYSTORE_DIR + "/keystore.jks";
+  private static final IOFile KEYSTORE = new IOFile(sandbox(), "keystore.jks");
   /** Key alias. */
   private static final String ALIAS = "basex";
   /** Key store and key password. */
   private static final String PASS = "password";
-
-  /** Shell command to create java keystore. */
-  private static final String[] GENKEY_CMD = { KEYTOOL,
-      "-genkey", "-keyalg", "RSA", "-validity", "360", "-alias", ALIAS,
-      "-keystore", KEYSTORE, "-storepass", PASS, "-keypass", PASS,
-      "-dname", "CN=hans wurst, OU=dev, O=basex, L=konstanz, ST=bw, C=de" };
+  /** Timeout for the keystore generation (seconds). */
+  private static final int TIMEOUT = 60;
 
   /** Digital certificate element. */
   private static final String CT = "<digital-certificate>" +
@@ -39,76 +32,73 @@ public final class FNCryptoTest extends SandboxTest {
       "<keystore-password>" + PASS + "</keystore-password>" +
       "<key-alias>" + ALIAS + "</key-alias>" +
       "<private-key-password>" + PASS + "</private-key-password>" +
-      "<keystore-uri>" + KEYSTORE + "</keystore-uri>" +
+      "<keystore-uri>" + KEYSTORE.path() + "</keystore-uri>" +
       "</digital-certificate>";
 
   /**
-   * Tests whether validate-signature returns true for a certificate created
-   * with generate-signature.
-   */
-  @Test public void validateSignatureWithCertificate() {
-    query("crypto:validate-signature(" +
-        "crypto:generate-signature(<a/>,'','','','',''," + CT + "))", "true");
-  }
-
-  /**
-   * Tests whether validate-signature returns true for a certificate created
-   * with generate-signature.
-   */
-  @Test public void validateSignatureWithXPathAndCertificate() {
-    query("crypto:validate-signature(crypto:generate-signature(<a><n/><n/></a>," +
-        "'','','','','','/a/n'," + CT + "))", "true");
-  }
-
-  /**
-   * Tests whether validate-signature returns true for a certificate created
-   * with generate-signature.
-   */
-  @Test public void validateSignatureFullySpecified() {
-    query("crypto:validate-signature(crypto:generate-signature(<a><n/></a>," +
-        "'exclusive','SHA512','RSA_SHA1','myPrefix','enveloped','/a/n'," + CT +
-        "))", "true");
-  }
-
-  /**
-   * Creates the database context.
-   * @throws Exception error during keystore generation or database exception
+   * Creates the keystore.
+   * @throws Exception error during keystore generation
    */
   @BeforeAll public static void start() throws Exception {
-    new File(KEYSTORE).delete();
-
-    final Process proc = Runtime.getRuntime().exec(GENKEY_CMD);
-    Thread.sleep(2000); // give the keytool some time to finish
-    if(proc.exitValue() != 0) throw new RuntimeException("Cannot initialize keystore.");
+    KEYSTORE.delete();
+    final ProcessBuilder pb = new ProcessBuilder(KEYTOOL,
+        "-genkey", "-keyalg", "RSA", "-validity", "360", "-alias", ALIAS,
+        "-keystore", KEYSTORE.path(), "-storepass", PASS, "-keypass", PASS,
+        "-dname", "CN=basex, OU=dev, O=basex, L=konstanz, ST=bw, C=de");
+    final Process proc = pb.redirectErrorStream(true).start();
+    if(!proc.waitFor(TIMEOUT, TimeUnit.SECONDS)) {
+      proc.destroyForcibly();
+      fail("Keystore generation timed out.");
+    }
+    assertEquals(0, proc.exitValue(), "Cannot initialize keystore.");
+    assertTrue(KEYSTORE.exists(), "Keystore was not created: " + KEYSTORE);
   }
 
   /**
-   * Removes test databases and closes the database context.
+   * Removes the keystore.
    */
   @AfterAll public static void finish() {
-    new File(KEYSTORE).delete();
+    KEYSTORE.delete();
+  }
+
+  /** Validates a signature that was created with the default algorithms. */
+  @Test public void defaultAlgorithms() {
+    query("crypto:validate-signature(" +
+        "crypto:generate-signature(<a/>,'','','','',''," + CT + "))", true);
+  }
+
+  /** Validates a signature that only covers the nodes selected by an XPath expression. */
+  @Test public void xpath() {
+    query("crypto:validate-signature(crypto:generate-signature(<a><n/><n/></a>," +
+        "'','','','','','/a/n'," + CT + "))", true);
+  }
+
+  /** Validates a signature for which every parameter is specified. */
+  @Test public void fullySpecified() {
+    query("crypto:validate-signature(crypto:generate-signature(<a><n/></a>," +
+        "'exclusive','SHA512','RSA_SHA512','myPrefix','enveloped','/a/n'," + CT +
+        "))", true);
   }
 
   /**
-   * Runs a query and matches the result against the expected output.
-   * @param query query
-   * @param expected expected output
+   * Validates signatures for all signature algorithms that a signature can be validated with
+   * (SHA-1 is rejected by the secure validation of the JDK).
    */
-  private static void query(final String query, final String expected) {
-    query(null, query, expected);
+  @Test public void signatureAlgorithms() {
+    for(final String algorithm : new String[] { "rsa_sha256", "rsa_sha512" }) {
+      query("crypto:validate-signature(crypto:generate-signature(<a/>," +
+          "'','','" + algorithm + "','','',''," + CT + "))", true);
+    }
   }
 
   /**
-   * Runs an updating query and matches the result of the second query
-   * against the expected output.
-   * @param first first query (can be {@code null})
-   * @param second second query
-   * @param expected expected output
+   * Validates signatures for all digest algorithms that a signature can be validated with
+   * (SHA-1 is rejected by the secure validation of the JDK).
    */
-  private static void query(final String first, final String second, final String expected) {
-    if(first != null) query(first);
-    final String result = query(second);
-    // quotes are replaced by apostrophes to simplify comparison
-    assertEquals(expected.replace('"', '\''), result.replace('"', '\''));
+  @Test public void digestAlgorithms() {
+    for(final String algorithm : new String[] { "sha256", "sha512" }) {
+      query("crypto:validate-signature(crypto:generate-signature(<a/>," +
+          "'','" + algorithm + "','','','',''," + CT + "))", true);
+    }
   }
 }
